src/TestFiles/ASTTests/SyntaxErrorTests/tests/test4.c



typedef int appel;
typedef const appel const kaas;

int main(){
    kaas k = 3;
    appel z;
    return 0;
};
